--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <div class="countdown" id="countdown"></div>
 
     <div id="block1">
